Use an html template element to define the component markup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <button id="add">Add Item</button>
     <button id="remove">Remove Item</button>
     <button id="calculate">Calculate</button>
+
+    <template id="knapsack-item-input-template">
+      <label>Value</label>
+      <input id="value" type="number">
+      <label>Weight</label>
+      <input id="weight" type="number">
+    </template>
+
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
