--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <button id="calculate">Calculate</button>
 
     <template id="knapsack-item-input-template">
+      <style>
+        label {
+          color: brown;
+          font-size: 20px;
+        }
+      </style>
       <label>Value</label>
       <input id="value" type="number">
       <label>Weight</label>
