--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <style>
         label {
           color: brown;
-          font-size: 20px;
+          font-size: 1.4rem;
+        }
+        input {
+          font-size: 1.4rem;
         }
       </style>
       <label>Value</label>
